tests/src/snapshots/fe_compiler_tests__analysis__case_032_return_addition_u128.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U128,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U128,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U128,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_addition_u128.fe:3:16
  │
3 │         return x + y
  │                ^ attributes hash: 9341420026351674595
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_addition_u128.fe:3:20
  │
3 │         return x + y
  │                    ^ attributes hash: 9341420026351674595
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_addition_u128.fe:3:16
  │
3 │         return x + y
  │                ^^^^^ attributes hash: 9341420026351674595
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_addition_u128.fe:2:5
  │  
2 │ ╭     pub def bar(x: u128, y: u128) -> u128:
3 │ │         return x + y
  │ ╰────────────────────^ attributes hash: 5564181667988271077
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U128,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U128,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U128,
            ),
        ),
    }

note: 
  ┌─ features/return_addition_u128.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u128, y: u128) -> u128:
3 │ │         return x + y
  │ ╰────────────────────^ attributes hash: 11343890269192079292
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U128,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U128,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U128,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
    }

note: 
  ┌─ features/return_addition_u128.fe:2:20
  │
2 │     pub def bar(x: u128, y: u128) -> u128:
  │                    ^^^^ attributes hash: 14909107886776088983
  │
  = Base(
        Numeric(
            U128,
        ),
    )

note: 
  ┌─ features/return_addition_u128.fe:2:29
  │
2 │     pub def bar(x: u128, y: u128) -> u128:
  │                             ^^^^ attributes hash: 14909107886776088983
  │
  = Base(
        Numeric(
            U128,
        ),
    )

note: 
  ┌─ features/return_addition_u128.fe:2:38
  │
2 │     pub def bar(x: u128, y: u128) -> u128:
  │                                      ^^^^ attributes hash: 14909107886776088983
  │
  = Base(
        Numeric(
            U128,
        ),
    )


